--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Russo-Japanese War, 1904-1905 -- Fiction'
+- GITenberg
 title: 'The North Pacific: A Story of the Russo-Japanese War'
 url: http://www.gutenberg.org/ebooks/45413
